fix(canasta): keep center alignment

--- a/src/components/canasta/canasta.sass
+++ b/src/components/canasta/canasta.sass
@@ -29,7 +29,7 @@
     @apply text-xl font-bold
 
   .vs-sign
-    @apply text-center text-xl mx-2
+    @apply text-center text-xl mx-2 flex-shrink-0
 
   .button
     @apply text-white bg-blue-500 py-2 px-4 border border-blue-500
